"""
Game Interpreter Agent
Responsible for understanding and translating the game's events, outcomes, and states.
"""

class GameInterpreterAgent:
    def __init__(self):
        """
        Initialize the Game Interpreter Agent.
        """
        pass

    def parse_game_output(self, game_output):
        """
        Parse the game's visual or textual output to extract meaningful data.
        """
        pass

    def translate_outcome(self, raw_outcome):
        """
        Translate the game's outcomes into structured data for analysis.
        """
        pass
