"""
Game Playing Agent
Responsible for interacting with the game interface, executing actions, and making moves.
"""

class GamePlayingAgent:
    def __init__(self, strategy_agent, betting_agent, interpreter_agent):
        """
        Initialize the Game Playing Agent with strategy, betting, and interpreter agents.
        """
        self.strategy_agent = strategy_agent
        self.betting_agent = betting_agent
        self.interpreter_agent = interpreter_agent

    def start_game(self):
        """
        Start the game and communicate the game state to the interpreter agent.
        """
        pass

    def execute_move(self, move):
        """
        Interact with the game interface to execute moves based on the recommended strategy.
        """
        pass

    def place_bet(self, bet_amount):
        """
        Interact with the game interface to place the decided bet.
        """
        pass
