"""
Game Strategy Agent
Responsible for deciding the best game strategy based on the current game state.
"""

class GameStrategyAgent:
    def __init__(self):
        """
        Initialize the Game Strategy Agent.
        """
        pass

    def analyze_game_state(self, game_state):
        """
        Analyze the current state of the game.
        """
        pass

    def recommend_next_move(self):
        """
        Provide recommendations on the next move or action based on the analyzed game state.
        """
        pass
