"""
Betting Strategy Agent
Responsible for determining the optimal betting amount based on the current game state and the player's financial position.
"""

class BettingStrategyAgent:
    def __init__(self):
        """
        Initialize the Betting Strategy Agent.
        """
        pass

    def analyze_financial_position(self, finances):
        """
        Analyze the player's current financial position.
        """
        pass

    def determine_bet_amount(self, game_risk_level):
        """
        Decide on the betting amount based on game strategy and player's risk tolerance.
        """
        pass
