
@startuml

package "LangChain Casino Game Agent" {

    class "KnowledgeBaseAgent" {
        + store_game_rules(rules: List[str])
        + update_knowledge_base(new_data: Dict)
    }

    class "GameStrategyAgent" {
        + analyze_game_state(game_state: Dict) : Dict
        + recommend_next_move(analysis: Dict) : str
    }

    class "BettingStrategyAgent" {
        + analyze_financial_position(finances: Dict) : Dict
        + determine_bet_amount(game_risk_level: float, financial_analysis: Dict) : float
    }

    class "GameInterpreterAgent" {
        + parse_game_output(game_output: str) : Dict
        + translate_outcome(raw_outcome: str) : Dict
    }

    class "GamePlayingAgent" {
        + start_game()
        + execute_move(move: str)
        + place_bet(bet_amount: float)
    }

    ' Relationships
    "GamePlayingAgent" --> "GameStrategyAgent" : Uses >
    "GamePlayingAgent" --> "BettingStrategyAgent" : Uses >
    "GamePlayingAgent" --> "GameInterpreterAgent" : Uses >

    "GameStrategyAgent" --> "KnowledgeBaseAgent" : Consults >
    "BettingStrategyAgent" --> "KnowledgeBaseAgent" : Consults >
}

@enduml
